<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.jukeboxplayer.Playlist"
    android:background="@color/appBgColor"
    >


    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/plistTxt"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textSize="14sp"
        android:textStyle="bold"
        android:id="@+id/textView2" />

    <!-- Song & Artist 1 -->
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/exampleSong1"
        android:id="@+id/exampleSongOne"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintRight_toLeftOf="@+id/song1TimeStamp"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/song1TimeStamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_margin="24dp"
        android:text="@string/nowPlaying_timeStamp"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/exampleSongOne"
        app:layout_constraintTop_toTopOf="@+id/exampleSongOne" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/exampleArtist1"
        android:id="@+id/exampleArtistOne"
        app:layout_constraintTop_toBottomOf="@+id/exampleSongOne"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp"
        app:layout_constraintHorizontal_bias="0.0" />


    <!-- Song & Artist 2 -->
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/exampleSong2"
        android:id="@+id/exampleSongTwo"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/exampleArtistOne"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintRight_toLeftOf="@+id/song2TimeStamp"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/song2TimeStamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_margin="24dp"
        android:text="@string/nowPlaying_timeStamp"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/exampleSongTwo"
        app:layout_constraintTop_toTopOf="@+id/exampleSongTwo" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/exampleArtist2"
        android:id="@+id/exampleArtistTwo"
        app:layout_constraintTop_toBottomOf="@+id/exampleSongTwo"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp"
        app:layout_constraintHorizontal_bias="0.0" />

    <!-- Song & Artist 3 -->
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/exampleSong3"
        android:id="@+id/exampleSongThree"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/exampleArtistTwo"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintRight_toLeftOf="@+id/song3TimeStamp"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/song3TimeStamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_margin="24dp"
        android:text="@string/nowPlaying_timeStamp"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/exampleSongThree"
        app:layout_constraintTop_toTopOf="@+id/exampleSongThree" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/exampleArtist3"
        android:id="@+id/exampleArtistThree"
        app:layout_constraintTop_toBottomOf="@+id/exampleSongThree"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp"
        />


    <!-- Bottom Buttons Bar -->
        <ImageButton
            android:id="@+id/goToLibrary"
            style="@style/controlButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/cont_desc_go_to_lib"
            android:src="@drawable/ic_library_music_black_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/prevSongButton"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            />

        <!-- Jump to the Start of Current Song / Previous Song -->
        <ImageButton
            android:id="@+id/prevSongButton"
            style="@style/controlButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/cont_desc_prev_track"
            android:src="@drawable/ic_skip_previous_black_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/playPauseButton"
            app:layout_constraintLeft_toRightOf="@+id/goToLibrary"
            />

        <!-- Play/Pause Button -->
        <ImageButton
            android:id="@+id/playPauseButton"
            style="@style/controlButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/cont_desc_play_pause"
            android:src="@drawable/ic_play_circle_outline_black_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/prevSongButton"
            app:layout_constraintRight_toLeftOf="@+id/nSongButton"
            />

        <!-- Jump to Next Song -->
        <ImageButton
            android:id="@+id/nSongButton"
            style="@style/controlButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/cont_desc_play_pause"
            android:src="@drawable/ic_skip_next_black_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/goToNowPlaying"
            app:layout_constraintLeft_toRightOf="@+id/playPauseButton"
            />

        <ImageButton
            android:id="@+id/goToNowPlaying"
            style="@style/controlButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/cont_desc_go_to_now_playing"
            android:src="@drawable/ic_my_now_playing_black_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/nSongButton"
            android:layout_marginBottom="0dp" />

</android.support.constraint.ConstraintLayout>
